# netorcai-client-java

./: .gitignore  .travis.yml  README.md  build.ninja  changelog.md  meson.build  pom.xml
examples/hello-gl/: README.md  pom.xml
examples/hello-gl/src/: HelloGL.java
examples/hello-player/: README.md  pom.xml
manifest/: hello-player
org/netorcai/: Client.java
org/netorcai/example/: HelloPlayer.java
org/netorcai/message/: DoInitMessage.java  DoTurnMessage.java  PlayerInfo.java
src/: Client.java  Version.java
src/message/: DoInitMessage.java  DoTurnMessage.java  GameStartsMessage.java  LoginAckMessage.java  PlayerActions.java
src/org/netorcai/: Client.java
src/org/netorcai/message/: DoInitMessage.java  DoTurnMessage.java  GameEndsMessage.java  GameStartsMessage.java  LoginAckMessage.java  PlayerActions.java  PlayerInfo.java  TurnMessage.java
test/: TestClient.java  TestDoInitMessage.java  TestDoTurnMessage.java  TestGameEndsMessage.java  TestGameStartsMessage.java  TestTurnMessage.java
